--- a/src/css/header.css
+++ b/src/css/header.css
@@ -45,7 +45,7 @@ header {
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    font-size: 1.1em;
+    font-size: 1.5rem;
     font-weight: bold;
     color: white;
 }
