--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,8 +9,8 @@
 :root {
     --nav-height: 12vh;
     --main-height: 88vh;
-    --themeColor-background-image: linear-gradient(to right, #ffbe45, red);
-    --firstSection-background-color: rgba(46, 45, 45, 0.502);
+    --themeColor-background-image: linear-gradient(to right, rgb(255, 190, 69), red);
+    --firstSection-background-color: rgba(26, 25, 25, 0.705);
 }
 
 
@@ -19,68 +19,21 @@
     display: block;
     width: 100%;
     max-width: 100vw;
-    height: var(--main-height);
+    height: max-content;
     position: relative;
 }
 
-/* floating social links Styling */
-.socials-container {
-    position: fixed;
-    bottom: 8%;
-    right: 5%;
-}
 
-.socials-container li {
-    position: relative;
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 25%;
-}
 
-.socials-container li a:hover {
-    font-size: 35px;
-}
-
-.socials-container li a {
-    background-color: white;
-    font-size: 30px;
-    color: #ffbe45;
-    padding: 75%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    border-radius: 100%;
-}
-
-/* greeting */
-.greeting-container {
-    position: relative;
+.other-area{
     width: 100%;
-    height: var(--main-height);
-    background-color: var(--firstSection-background-color);
-    color: white;
-    text-align: center;
-    text-transform: capitalize;
+    height: 100vh;
+    background: var(--themeColor-background-image);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.greeting-container h1 {
-    padding: 10%;
-    font-size: 3em;
-    word-spacing: 2px;
-    letter-spacing: 2px;
-}
-
-.greeting-container p {
-    padding: 10px 250px;
-    font-family: 'Times New Roman', Times, serif;
-    word-spacing: 2px;
-
-}
 
 
 /* BODY */
