--- a/src/css/services.css
+++ b/src/css/services.css
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    font-size: 2rem;
     width: 35%;
     height: 100%;
     background-size: cover;
@@ -27,6 +28,7 @@
     width: 65%;
     height: 100%;
     max-height: 100%;
+    font-size: 1.5rem;
 }
 
 .service-2 .desc {
@@ -47,17 +49,20 @@
 
 .message h1 {
     font-size: 75px;
+    font-family: 'Lobster', cursive;
     text-transform: capitalize;
 }
 
 .message article {
     text-transform: capitalize;
+    font-size: 2rem;
 }
 
 .message article ul {
     padding: 25px;
     list-style-type: none;
     font-size: 20px;
+    text-align: left;
 }
 
 .message article ul li {
@@ -74,33 +79,3 @@
             display: flex;
             flex-direction: row-reverse;
         } */
-/* TOP BUTTON */
-.toTop {
-    font-size: 25px;
-    display: none;
-    /*to flex when scrolled a particular height */
-    position: fixed;
-    z-index: 89;
-    width: 60px;
-    height: 50px;
-    text-align: center;
-    text-decoration: none;
-    justify-content: center;
-    align-items: center;
-    bottom: 75px;
-    right: 100px;
-    background-color: rgb(255, 190, 69);
-    color: white;
-    border-radius: 10px;
-    transition-property: width, height, bottom, right, font-size;
-    transition-duration: 0.25s;
-    transition-timing-function: ease-in-out;
-}
-
-.toTop:hover {
-    width: 70px;
-    height: 60px;
-    bottom: 72px;
-    right: 95px;
-    font-size: 30px;
-}
